Bug 1576171 - Send ftp channel status via OnStartRequest r=valentin

In FtpChannelParent, we didn't propagate the channel status to FtpChannelChild. This could make child start to do diversion on a failed channel.
Like what we did in http channel, we should send the channel status to child via OnStartRequest message.

Differential Revision: https://phabricator.services.mozilla.com/D45648